Modernisierung von deprecated Funktionen und Differenzberechnung vollständig mit BigDecimal (für große Einnahmen;) (#96)
Co-authored-by: meigelb <94784984+meigelb@users.noreply.github.com>